# Embedded

./: CMakeList.txt  CMakeLists.txt  Jenkinsfile  README.md  question4.xlsx
day01/: CMakeLists.txt
day01/src/: day1.cpp
day01/unit_tests/: CMakeLists.txt  day1-gtests.cpp
utils/: CMakeList.txt  CMakeLists.txt
